--- a/Resources/HiraganaFonts.qrc
+++ b/Resources/HiraganaFonts.qrc
@@ -1,5 +1,5 @@
 <RCC>
-    <qresource prefix="/">
-        <file>HiraganaFonts/PJ_Hiragana.ttf</file>
+    <qresource prefix="/HiraganaFonts">
+        <file>PJ_Hiragana.ttf</file>
     </qresource>
 </RCC>
