--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -133,7 +133,7 @@
   </action>
   <action name="actionRomanji_to_Hiragana_QCM">
    <property name="text">
-    <string>Romanji to Hiragana (QCM)</string>
+    <string>Romanji to Hiragana (MCQ)</string>
    </property>
   </action>
   <action name="actionHiragana_to_Romanji_Kbd">
@@ -143,12 +143,12 @@
   </action>
   <action name="actionKatakana_to_Romanji_QCM">
    <property name="text">
-    <string>Katakana to Romanji (QCM)</string>
+    <string>Katakana to Romanji (MCQ)</string>
    </property>
   </action>
   <action name="actionRomanji_to_Katakana_QCM">
    <property name="text">
-    <string>Romanji to Katakana (QCM)</string>
+    <string>Romanji to Katakana (MCQ)</string>
    </property>
   </action>
   <action name="actionKatakana_to_Romanji_Kbd">
@@ -158,7 +158,7 @@
   </action>
   <action name="actionHiragana_to_Romanji_QCM">
    <property name="text">
-    <string>Hiragana to Romanji (QCM)</string>
+    <string>Hiragana to Romanji (MCQ)</string>
    </property>
   </action>
   <action name="actionApplication_Setting">
