disabling wifi on startup now working (can't re enable it tho), corrected Ui Widget promotion link to Src/ folders

--- a/Src/appsettings.ui
+++ b/Src/appsettings.ui
@@ -425,7 +425,7 @@
        <item>
         <widget class="QLabel" name="WifiLabel">
          <property name="text">
-          <string>Keep Wifi on (TODO) :</string>
+          <string>Keep Wifi on at startup :</string>
          </property>
         </widget>
        </item>
