--- a/Src/qcmentryguess.ui
+++ b/Src/qcmentryguess.ui
@@ -29,6 +29,9 @@
          <family>DotGothic16</family>
         </font>
        </property>
+       <property name="styleSheet">
+        <string notr="true">Text{fontSizeMode: Text.Fit}</string>
+       </property>
        <property name="text">
         <string>あああaaa</string>
        </property>
