--- a/Src/widgetwelcome.ui
+++ b/Src/widgetwelcome.ui
@@ -71,12 +71,6 @@
 
   The &quot;Edit *** set&quot; submenus will allow you to add/remove kanas from your MCQ and keep track of your progress by assigning to each a &quot;learning score&quot; from 0 to 5.
 
-  This application is very inspired by the android application Obenko, scan the QRCode to learn more about it.
-
-  This application is designed to help you memorize kanas and numbers (soon™). Click &quot;Main&quot; to start learning.
-
-  The &quot;Edit *** set&quot; submenus will allow you to add/remove kanas from your MCQ and keep track of your progress by assigning to each a &quot;learning score&quot; from 0 to 5.
-
   This application is very inspired by the android application Obenko, scan the QRCode to learn more about it.</string>
        </property>
        <property name="wordWrap">
@@ -148,7 +142,7 @@
         <pixmap resource="../Resources/Pictures.qrc">:/pictures/QrCode/obenkyoQrCode.png</pixmap>
        </property>
        <property name="scaledContents">
-        <bool>false</bool>
+        <bool>true</bool>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
